--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -9,6 +9,7 @@ div.container-fluid {
     /*width: 100%;*/
     background-color: rgb(35, 61, 88);
     max-width: 1200px;
+    height: 100vh;
     
 }
 
@@ -16,7 +17,7 @@ nav#principal{
     overflow: hidden;
     width: 100%;
     height: 10vh;
-    /*background-color: rgba(41, 171, 226, 1);*/
+   
 }
 nav#principal img{
     float: left;
@@ -27,7 +28,6 @@ nav#principal img{
 }
 nav#principal h2{
     float: left;
-    
     position: relative;
     width: 15%;
     top: 2vh;
@@ -67,6 +67,11 @@ nav#principal ul li a{
     font-size: 1.2em;
 
 }
+nav#principal ul li a:hover{
+    color: red;
+
+}
+
 nav#principal ul li#faq{
     padding-left: 4%;
 
@@ -102,6 +107,7 @@ div.mainlogo figure img {
 
 }
 div.mainlogo button{
+    position: relative;
     margin-left: 40%;
     width: 20%;
     height: 8vh;
@@ -122,21 +128,28 @@ button a {
     
     
     
+    
+    
+    
+    
 
 } 
-/*a.button:hover{
-
+button:hover{
     transform: scale(1.2) ;
     -webkit-transform: scale(1.2) ;
     -moz-transform: scale(1.2) ;
     -ms-transform: scale(1.2) ;
     -o-transform: scale(1.2) ;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
-}*/
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+    text-decoration: none;
+}
+button a:hover{
+    text-decoration: none;
+}
 div.spinner-grow{
     margin-left: 48.5%;
 }
@@ -163,10 +176,19 @@ div.spinner-grow{
     color: white;
     font-size: 1.7em;
     margin-left: 1%;
-    
-    
-    
+}
 
+#redesSociales ul li a i:hover{
+    transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
 }
 #redesSociales small{
     color: white;
