--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -90,7 +90,7 @@ div.mainlogo h1{
     position: relative;
     text-align: center;
     padding-top: 3vh;
-    font-family: "aller";
+    font-family: "aldo";
     color:white;
 
 }
@@ -98,7 +98,7 @@ div.mainlogo h3{
     position: relative;
     text-align: center;
     padding-top: 0vh;
-    font-family: "aller";
+    font-family: "aldo";
     font-size: 1.5em;
     color: white;
 }
