--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -198,9 +198,19 @@ div#copy h4{
 }
 
 @media (max-width:767px){
+    nav#principal{
+        overflow: hidden;
+        width: 100%;
+        height: 8vh;
+        
+    }
+    
     nav#principal img{
+        float: left;
+        position: relative;
         width: 10%;
         top: 0vh;
+        left: 1%;
     }
 
     nav#principal h2{
@@ -208,7 +218,7 @@ div#copy h4{
         position: relative;
         width: 30%;
         top: 1vh;
-        left: 2%;
+        left: 4%;
         color: white;
         font-family: "aldo";
         font-size: 1.4em;
@@ -225,6 +235,7 @@ div#copy h4{
         margin-right: 2%;
         margin-top: 2vh;
         width: 35%;
+        height: 5vh;
         border-radius: 15px;
         -webkit-border-radius: 15px    ;
         -moz-border-radius: 15px    ;
