--- a/css/styleproducts.css
+++ b/css/styleproducts.css
@@ -5,10 +5,451 @@
 }
 /* for mobile phone */
 div.container-fluid {
-    /*width: 100%;*/
+    width: 100%;
     background-color: rgb(35, 61, 88);
     max-width: 1200px;
 
+}
+@media (max-width:767px){
+nav#principal ul{
+    display: none;
+}
+
+ul.nav-pills li{
+    display: block;
+    position: relative;
+    background-color: rgb(248, 147, 31);
+    margin-right: 2%;
+    margin-top: -6vh;
+    width: 35%;
+    height: 5vh;
+    border-radius: 15px;
+    -webkit-border-radius: 15px    ;
+    -moz-border-radius: 15px    ;
+    -ms-border-radius: 15px    ;
+    -o-border-radius: 15px    ;
+}
+ul.nav-pills li a{
+    color: white;
+    text-align: center;
+    font-family: "aller";
+    font-size: 1.2em;
+    
+}
+
+div.dropdown-menu{
+    background-color: rgb(35, 61, 88);
+
+}
+
+nav#principal{
+    overflow: hidden;
+    width: 100%;
+    height: 8vh;
+    
+}
+nav#principal img{
+    float: left;
+    position: relative;
+    width: 10%;
+    top: 2vh;
+    left: 1%;
+}
+nav#principal h2{
+    float: left;
+    position: relative;
+    width: 40%;
+    top: 3vh;
+    left: 4%;
+    color: white;
+    font-family: "aldo";
+    font-size: 1.4em;
+
+}
+nav#principal ul{
+    overflow: hidden;
+    float: left;
+    left: 28%;
+    top: 3vh;
+    width: 55%;
+    position: relative;
+    right: 1%;
+}
+
+nav#principal ul li{
+
+    float: left;
+    left: 60%;
+    width: 14%;
+    margin-left:2%;
+    list-style: none;
+
+}
+nav#principal ul li a{
+    width: 40%;
+    padding-left: 0%;
+    color: white;
+    text-align: center;
+    font-family: 'aldo';
+    font-size: 1.2em;
+
+}
+nav#principal ul li#faq{
+    padding-left: 4%;
+
+}
+div.animation #particles-js{
+    width: 90%;
+	height: 180vh;
+	margin-left: 10%;
+	min-height: 300px;
+	position: absolute;
+}
+.photo{
+  width: 100%;
+}
+.photo-container{
+  position: relative;
+  margin-top: 5vh;
+  width: 80%;
+  text-align: center;
+
+}
+.photo-container img{
+  width: 100%;
+  border-radius: 10px ;
+}
+
+article{
+  margin-bottom: 10px;
+  height: 50vh;
+  
+  
+}
+div.titulo{
+  margin-top: 2vh;
+  height: 6vh;
+  width: 80%;
+  border: 1px solid white;
+  align-content: center;
+  border-radius: 10px ;
+  -webkit-border-radius: 10px ;
+  -moz-border-radius: 10px ;
+  -ms-border-radius: 10px ;
+  -o-border-radius: 10px ;
+  text-align: center;
+}
+
+div.titulo h2{
+  color:white;
+  font-family: "aller";
+  font-size: 1.3em;
+  padding-top: 1vh;
+}
+div.descripcion{
+    width: 80%;
+    text-align: center;
+}
+
+div.descripcion p{
+  color:white;
+  font-family: "aller";
+  font-size: 1em;
+  margin-top: 3vh; 
+
+}
+
+
+
+a.more{
+  display: block;
+  background-color: rgb(248, 147, 31);
+  text-decoration: none;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: white;
+  width:45%;
+  height: 4vh;
+  font-family: "aller";
+  font-size: 1.3em;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+#redesSociales ul{
+  width: 100%;
+  height: 6vh;
+  padding-top: 1vh;
+  padding-left: 10%;
+  text-align: center;
+  
+}
+
+#redesSociales ul li{
+
+    float: left;
+    list-style:none;
+    width:15%;
+    text-align: center;
+    
+}
+#redesSociales ul li a i{
+    position: relative;
+    color: white;
+    font-size: 1.5em;
+    
+
+}
+#redesSociales small{
+    color: white;
+    margin-left: 25%;
+}
+}
+
+@media (max-width:991px) and (min-width:768px){
+    ul.nav-pills{
+        display: none;
+    }
+    nav#principal ul{
+        display: block;
+    }
+    
+    section{
+      overflow:hidden;
+      width: 100%;
+      box-sizing: border-box;
+      position: relative;
+      text-align: center;
+      padding-left: 0%;
+      margin-left: 0%;
+    
+    }
+    article{
+        margin-bottom: 2vh;
+        height: 40vh;
+        width: 100%;
+    }
+    article.product{
+      float: left;
+      width: 30%;
+      margin-left: 20px;
+    }
+    .photo-container{
+        position: relative;
+        margin-top: 3vh;
+        text-align: center;
+      
+    }
+    .photo-container img{
+        width: 100%;
+        border-radius: 10px ;
+    }
+    a.more{
+      display: block;
+      background-color: rgb(248, 147, 31);
+      text-decoration: none;
+      text-align: center;
+      margin-bottom: 10px;
+      margin-top: 10px;
+      padding-top: 1%;
+      color: white;
+      width:45%;
+      height: 3vh;
+      font-family: "aller";
+      font-size: 1.2em;
+      border-radius: 15px;
+      -webkit-border-radius: 15px;
+      -moz-border-radius: 15px;
+      -ms-border-radius: 15px;
+      -o-border-radius: 15px;
+    }
+    nav#principal{
+        overflow: hidden;
+        width: 100%;
+        height: 10vh;
+    }
+    nav#principal img{
+        float: left;
+        position: relative;
+        width: 6%;
+        top: 3vh;
+        left: 2%;
+    }
+    nav#principal h2{
+        float: left;
+        position: relative;
+        width: 25%;
+        top: 4.5vh;
+        left: 3%;
+        color: white;
+        font-family: "aldo";
+        font-size: 1.6em;
+    
+    }
+    nav#principal ul{
+        overflow: hidden;
+        float: left;
+        left: 5%;
+        top: 5vh;
+        width: 69%;
+        position: relative;
+        right: 4%;
+    }
+    
+    nav#principal ul li{
+    
+        float: left;
+        left: 55%;
+        width: 15%;
+        margin-left:0%;
+        list-style: none;
+    
+    }
+    nav#principal ul li a{
+        width: 14%;
+        padding-left: 2%;
+        color: white;
+        text-align: center;
+        font-family: 'aldo';
+        font-size: 1.1em;
+    
+    }
+    nav#principal ul li#faq{
+        padding-left: 4%;
+    
+    }
+    div.animation #particles-js{
+        width: 90%;
+        height: 180vh;
+        min-height: 300px;
+        position: absolute;
+    }
+    
+    
+    div.titulo{
+      margin-top: 1vh;
+      height: 7vh;
+      border: 1px solid white;
+      align-content: center;
+      border-radius: 10px ;
+      -webkit-border-radius: 10px ;
+      -moz-border-radius: 10px ;
+      -ms-border-radius: 10px ;
+      -o-border-radius: 10px ;
+      
+    }
+    
+    div.titulo h2{
+      color:white;
+      font-family: "aller";
+      font-size: 1.4em;
+      padding-top: 1vh;
+    }
+    div.descripcion p{
+      color:white;
+      font-family: "aller";
+      font-size: 1em;
+      margin-top: 2vh; 
+    
+    }
+    
+    #redesSociales ul{
+      width: 100%;
+      height: 6vh;
+      padding-top: 1vh;
+      padding-left: 22%;
+      text-align: center;
+      
+    }
+    
+    #redesSociales ul li{
+    
+        float: left;
+        list-style:none;
+        width:12%;
+        margin-left:0%; 
+        
+        
+    }
+    #redesSociales ul li a i{
+        position: relative;
+        color: white;
+        font-size: 1.7em;
+        ;
+        
+    
+    }
+    #redesSociales small{
+        color: white;
+        margin-left: 35%;
+        font-size: 1em;
+    }
+    }
+
+
+
+
+
+
+
+
+/* for desktop */
+@media only screen and (min-width: 1180px){
+
+ul.nav-pills{
+    display: none;
+}
+nav#principal ul{
+    display: block;
+}
+
+section{
+  overflow:hidden;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  text-align: center;
+  padding-left: 10%;
+  margin-top: 6vh;
+
+}
+article{
+    margin-bottom: 10px;
+    height: 60vh;
+}
+article.product{
+  float: left;
+  width: 20%;
+  margin-left: 20px;
+}
+.photo-container{
+    position: relative;
+    margin-top: 2vh;
+    text-align: center;
+  
+}
+.photo-container img{
+    width: 100%;
+    border-radius: 10px ;
+}
+a.more{
+  display: block;
+  background-color: rgb(248, 147, 31);
+  text-decoration: none;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: white;
+  width:45%;
+  font-family: "aller";
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 nav#principal{
     overflow: hidden;
@@ -72,25 +513,8 @@ div.animation #particles-js{
 	min-height: 300px;
 	position: absolute;
 }
-.photo{
-  width: 100%;
-}
-.photo-container{
-  position: relative;
-  margin-top: 2vh;
-  text-align: center;
 
-}
-.photo-container img{
-  width: 100%;
-  border-radius: 10px ;
-}
 
-article{
-  margin-bottom: 10px;
-  height: 60vh;
-  
-}
 div.titulo{
   margin-top: 1vh;
   height: 12vh;
@@ -119,28 +543,13 @@ div.descripcion p{
 
 
 
-a.more{
-  display: block;
-  background-color: rgb(248, 147, 31);
-  text-decoration: none;
-  text-align: center;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  color: white;
-  width:45%;
-  font-family: "aller";
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-}
 #redesSociales ul{
   width: 100%;
   height: 6vh;
   padding-top: 1vh;
-  padding-left: 41%;
+  padding-left: 25%;
   text-align: center;
+  
   
 }
 
@@ -148,78 +557,21 @@ a.more{
 
     float: left;
     list-style:none;
-    width:5%;
+    width:65%;
+    
     
 }
-#redesSociales ul li a i{
+#redesSociales ul li a {
     position: relative;
     color: white;
     font-size: 1.7em;
-    margin-left: 1%;
+    margin-left: 2%;
+    
+    
 
 }
 #redesSociales small{
     color: white;
     margin-left: 42%;
 }
-/* for desktop */
-@media only screen and (min-width: 1180px){
-section{
-  overflow:hidden;
-  width: 100%;
-  box-sizing: border-box;
-  position: relative;
-  text-align: center;
-  padding-left: 10%;
-
-}
-article.product{
-  float: left;
-  width: 20%;
-  margin-left: 20px;
-}
-.more{
-  display: block;
-  background-color: grey;
-  text-decoration: none;
-  text-align: center;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  color: white;
-  width:120px;
-  font-family: "aller";
-  border-radius: 5%
-}
-
-@media (max-width:991px) and (min-width:768px){
-
-
-
-  
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }
