--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -1,135 +1,67 @@
 *{
     margin: 0 auto;
     box-sizing: border-box;
-    
+
 }
-
-
 div.container-fluid {
     background-color: rgb(35, 61, 88);
     max-width: 1200px;
     height: 100vh;
-    
+
 }
 
-ul.nav-pills li{
-    display: none;
-}
-
-nav#principal{
-    overflow: hidden;
+.mainperfil{
     width: 100%;
-    height: 10vh;
-   
 }
-nav#principal img{
-    float: left;
-    position: relative;
-    width: 4%;
-    top: 1vh;
-    left: 1%;
-}
-nav#principal h2{
-    float: left;
-    position: relative;
-    width: 15%;
-    top: 2vh;
-    left: 2%;
-    color: white;
-    font-family: "aldo";
-    font-size: 1.6em;
-
-}
-nav#principal ul{
-    overflow: hidden;
-    float: left;
-    left: 28%;
-    top: 3vh;
-    width: 55%;
-    position: relative;
-    right: 1%;
-    
-    
+.mainperfil h1{
+    width: 50%;
+    margin-top: 5vh;
 }
 
-nav#principal ul li{
-    
-    float: left;
-    left: 60%;
-    width: 14%;
-    margin-left:2%; 
-    list-style: none;
-    
-}
-nav#principal ul li a{
-    
-    padding-left: 0%;
-    color: white;
+.titulo{
+    color: #FFF;
     text-align: center;
-    font-family: 'aldo';
-    font-size: 1.2em;
-
-}
-nav#principal ul li a:hover{
-    color: red;
-
 }
 
-nav#principal ul li#faq{
-    padding-left: 4%;
-
-}
-div.animation #particles-js{
-    width: 100%;
-	height: 100vh;
-	min-height: 300px;
-	position: absolute;
-
-}
-div.mainlogo h1{
+form {
     position: relative;
-    text-align: center;
-    padding-top: 3vh;
-    font-family: "aldo";
-    color:white;
+    color: #FFF;
+    width: 80%;
+    left: 0%;
+}
+
+.lineahorizontal{
+    border-width: 1px;
+    border-color: #FFF;
+}
+div.form-group{
+    margin-top: 10vh;
+    width: 80%;
+    margin-left: 5%;
+}
+div.form-group label{
+
+    font-family: 'aller';
+        font-size: 1.5em;
+        color: white;
 
 }
-div.mainlogo h3{
+button.btn-primary{
     position: relative;
-    text-align: center;
-    padding-top: 0vh;
-    font-family: "aldo";
-    font-size: 1.5em;
-    color: white;
-}
-div.mainlogo figure img {
+    margin-left: 35%;
     width: 20%;
-    padding-top: 3vh;
-    margin-left: 40%; 
-
-}
-div.mainlogo button{
-    position: relative;
-    margin-left: 40%;
-    width: 20%;
-    height: 8vh;
-    background-color: rgb(248, 147, 31);
+    margin-top: 8vh;
     border-radius: 20px;
+    font-family: 'aller';
+    font-size: 1.4em;
+    background-color:rgb(248, 147, 31);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
-    text-align: center;
-    padding-top: 1vh;
-    
-}
-button a {
-    color: white;
-    font-family: "aller";
-    font-size: 1.4em;
 }
 
-button:hover{
+button.btn-primary:hover{
     transform: scale(1.2) ;
     -webkit-transform: scale(1.2) ;
     -moz-transform: scale(1.2) ;
@@ -142,32 +74,112 @@ button:hover{
     -o-transition: 0.6s;
     text-decoration: none;
 }
-button a:hover{
-    text-decoration: none;
+
+
+ul.nav-pills li{
+    display: none;
 }
-div.spinner-grow{
-    margin-left: 48.5%;
-}
-#redesSociales ul{
-    width: 120%;
+
+nav#principal{
     overflow: hidden;
-    margin-bottom: 0vh;
-    padding-left: 41%;
-    padding-top: 2%;
-    
+    width: 100%;
+    height: 10vh;
+
 }
-#redesSociales ul li{
+nav#principal img{
+    float: left;
+    position: relative;
+    width: 4%;
+    top: 2vh;
+    left: 1%;
+}
+nav#principal h2{
+    float: left;
+    position: relative;
+    width: 15%;
+    top: 4vh;
+    left: 2%;
+    color: white;
+    font-family: "aldo";
+    font-size: 1.6em;
+
+}
+nav#principal ul{
+    overflow: hidden;
+    float: left;
+    left: 25%;
+    top: 3vh;
+    width: 55%;
+    position: relative;
+    right: 1%;
+
+
+}
+
+nav#principal ul li{
 
     float: left;
-    list-style:none;
-    width: 4%;
+    left: 60%;
+    width: 14%;
+    margin-left:2%;
+    list-style: none;
+
+}
+nav#principal ul li a{
+
+    padding-left: 0%;
+    color: white;
+    text-align: center;
+    font-family: 'aldo';
+    font-size: 1.2em;
+
+
+}
+nav#principal ul li a:hover{
+    color: red;
+
 }
 
-#redesSociales ul li a i{
+nav#principal ul li#faq{
+    padding-left: 4%;
+
+}
+div.animation #particles-js{
+    width: 90%;
+    height: 100vh;
+    margin-left: 2%;
+	min-height: 300px;
+	position: absolute;
+
+}
+
+div#redesSociales{
+    height: 15vh;
+    margin-top: 8vh;
+}
+
+
+div#redesSociales ul{
+    overflow: hidden;
+    margin-bottom: 0vh;
+    margin-top: 0vh;
+    padding-left: 33%;
+    
+}
+
+div#redesSociales ul li{
+    float: left;
+    list-style:none;
+    width: 5%;
+    font-size: 1.8em;
+    padding-left: 5%;
+}
+
+#redesSociales ul li a i {
     position: relative;
     color: white;
-    font-size: 1.7em;
     margin-left: 1%;
+        
 }
 
 #redesSociales ul li a i:hover{
@@ -185,8 +197,8 @@ div.spinner-grow{
 div#copy{
     position: relative;
     margin-top: 2vh;
-    bottom: 0vh;
-    left: 42%;
+    
+    left: 38%;
 
 }
 
@@ -200,15 +212,19 @@ div#copy h4{
 
 
 
+/* PHONE */
+
+
+
+
 
 @media (max-width:767px){
     nav#principal{
         overflow: hidden;
         width: 100%;
         height: 8vh;
-        
     }
-    
+
     nav#principal img{
         float: left;
         position: relative;
@@ -251,82 +267,50 @@ div#copy h4{
         text-align: center;
         font-family: "aller";
         font-size: 1.2em;
-        
+
     }
-    
+
     div.dropdown-menu{
         background-color: rgb(35, 61, 88);
 
     }
 
-    div.mainlogo h1{
-        padding-top: 6vh;
-        font-size: 1.5em;
-    }
-
-    div.mainlogo h3{
-        padding-top: 1vh;
-        font-size: 1.2em;
-        
-    }
-    div.mainlogo figure img {
-        width: 60%;
-        padding-top: 8vh;
-        margin-left: 21%; 
     
-    }
-    div.mainlogo button{
-        margin-left: 23%;
-        margin-top: 5vh;
-        width: 55%;
-        height: 5vh;
-        text-align: center;
-        padding-top: 0vh;
-        
-    }
-    button#cursos a {
-        position: relative;
-        color: white;
-        font-size: 1.2em;
-        
-    }
-    div.spinner-grow{
-        margin-left: 45%;
-    }
-
     div#redesSociales{
         margin-left: 0%;
 
     }
     div#redesSociales ul{
-        
-        margin-left: 10%;
+
+        margin-left: 0%;
         overflow: hidden;
         padding-left: 0%;
         padding-top: 4vh;
         
 
     }
-    
+
     div#redesSociales ul li{
-    
+
         float: left;
         list-style:none;
         width: 12%;
-        
+        font-size: 1.3em;
+        padding-left: 13%;
     }
-        
+
     div#redesSociales ul li a i{
         position: relative;
         color: white;
-        font-size: 1.7em;
-        margin-left: 1%;
+        
+       
+        
     }
     div#copy{
         position: relative;
         margin-top: 2vh;
         bottom: 0vh;
-        left: 23%;
+        left: 24%;
 
     }
 
@@ -336,125 +320,118 @@ div#copy h4{
         font-size: 1em;
 
     }
-} 
+}
+
+
+/* TABLET */
+
+
+
 
 @media (max-width:991px) and (min-width:768px){
     nav#principal img{
-        width: 3%;
+        width: 6%;
         top: 2.5vh;
-       
+
     }
 
     nav#principal h2{
-        width: 15%;
-        top: 2.5vh;
-        font-size: 1.4em;
-    
+        width: 20%;
+        top: 3.5vh;
+        font-size: 1.6em;
+
     }
 
     nav#principal ul{
-        left: 16%;
-        top: 3vh;
-        width: 60%;
+        left: 12%;
+        top: 3.5vh;
+        width: 65%;
         right: 0%;
-        
-        
-        
+
+
+
     }
-    
+
     nav#principal ul li{
-        
+
         left: 60%;
         width: 16%;
-        margin-left:0%; 
-          
+        margin-left:0%;
+
     }
 
     nav#principal ul li a{
-        
+
         padding-left: 6%;
-        font-size: 1em;
-    
-    }
-    
-    
-    nav#principal ul li#faq{
-        padding-left: 5%;
-    
+        font-size: 1.2em;
+
     }
 
-    div.mainlogo h1{
-        position: relative;
-        text-align: center;
-        padding-top: 6vh;
-        font-family: "aldo";
-        font-size: 2.6em;
-        color:white;
-    
+
+    nav#principal ul li#faq{
+        padding-left: 5%;
+
     }
-    div.mainlogo h3{
-        position: relative;
-        text-align: center;
-        padding-top: 0vh;
-        font-family: "aldo";
-        font-size: 1.8em;
+
+    .mainperfil h1{
+        width: 50%;
+        margin-top: 8vh;
+    }
+    div.form-group{
+        margin-top: 10vh;
+        width: 80%;
+        margin-left: 10%;
+    }
+    div.form-group label{
+        font-family: 'aller';
+        font-size: 1.5em;
         color: white;
     }
-    div.mainlogo figure img {
-        width: 45%;
-        padding-top: 8vh;
-        margin-left: 28.5%; 
-    
-    }
-    div.mainlogo button{
-        margin-left: 34%;
-        margin-top: 3vh;
-        width: 35%;
-        height: 6vh;
-        padding-top: 0vh;
+    button.btn-primary{
+        position: relative;
+        margin-left: 35%;
+        width: 30%;
+        margin-top: 10vh;
+        font-size: 1.4em;
         
     }
-    button a {
-        color: white;
-        font-family: "aller";
-        font-size: 1.4em;
-    }
+    
+    
     #redesSociales ul{
         margin-bottom: 0vh;
         margin-top: 3vh;
-        padding-left: 28%;
+        padding-left: 14%;
         padding-top: 3%;
-        
-        
+
+
     }
-    #redesSociales ul li{
-    
-        width: 4%;
-        margin-left: 3.8%;
-        
+       
+
+    div#redesSociales ul li{
+
+        width: 10%;
+        font-size: 1.3em;
+        padding-left: 11%;
     }
-    
+
     #redesSociales ul li a i{
-        position: relative;
-        color: white;
-        font-size: 2.2em;
-        margin-left: 1%;
+        font-size: 2em;
+        margin-left: 0%;
     }
     div#copy{
         position: relative;
         margin-top: 5vh;
         bottom: 0vh;
-        left: 37%;
-    
+        left: 35%;
+
     }
-    
+
     div#copy h4{
         color: white;
         font-family: "aldo";
         font-size: 1.2em;
-    
+
     }
 }
-
 
 
