--- a/css/styleDetalleProd.css
+++ b/css/styleDetalleProd.css
@@ -223,96 +223,185 @@ div#copy h4{
 
 
 @media (max-width:767px){
-  article ul {
-    margin-left:5%;
-  }
-  article ul li{
-    margin-left: 5px;
-  }
-  #more{
-    margin-left: 15%;
 
-  }
-   h1.titulo{
-    margin-left: 5%;
-    color: white;
-  }
-  div.dropdown-menu{
-      background-color: rgb(35, 61, 88);
+    nav#principal{
+        overflow: hidden;
+        width: 100%;
+        height: 8vh;
+        
+    }
+    
+    nav#principal img{
+        float: left;
+        position: relative;
+        width: 10%;
+        top: 0vh;
+        left: 1%;
+    }
 
-  }
-  nav#principal ul{
-      display: none;
-  }
-  ul.nav-pills li{
-      display: block;
-      position: relative;
-      background-color: rgb(248, 147, 31);
-      margin-right: 2%;
-      margin-top: 2vh;
-      width: 35%;
-      border-radius: 15px;
-      -webkit-border-radius: 15px    ;
-      -moz-border-radius: 15px    ;
-      -ms-border-radius: 15px    ;
-      -o-border-radius: 15px    ;
-  }
-  ul.nav-pills li a{
-      color: white;
-      text-align: center;
-      font-family: "aller";
-      font-size: 1.2em;
+    nav#principal h2{
+        float: left;
+        position: relative;
+        width: 30%;
+        top: 1vh;
+        left: 4%;
+        color: white;
+        font-family: "aldo";
+        font-size: 1.4em;
+    }
+    nav#principal ul{
+        display: none;
+    }
 
-  }
-  video{
-    margin-top: 30px;
-  }
-  div#redesSociales{
-      margin-left: 0%;
+    ul.nav-pills li{
+        display: block;
+        position: relative;
+        background-color: rgb(248, 147, 31);
+        margin-right: 2%;
+        margin-top: 2vh;
+        width: 35%;
+        height: 5vh;
+        border-radius: 15px;
+        -webkit-border-radius: 15px    ;
+        -moz-border-radius: 15px    ;
+        -ms-border-radius: 15px    ;
+        -o-border-radius: 15px    ;
+    }
+    ul.nav-pills li a{
+        color: white;
+        text-align: center;
+        font-family: "aller";
+        font-size: 1.2em;
+        
+    }
+    
+    div.dropdown-menu{
+        background-color: rgb(35, 61, 88);
 
-  }
-  div#redesSociales ul{
-
-      margin-left: 10%;
-      overflow: hidden;
-      padding-left: 0%;
-      padding-top: 4vh;
-
-
-  }
-
-  div#redesSociales ul li{
-
-      float: left;
-      list-style:none;
-      width: 12%;
-
-  }
-
-  div#redesSociales ul li a i{
-      position: relative;
-      color: white;
-      font-size: 1.7em;
-      margin-left: 1%;
-  }
-  div#copy{
-      position: relative;
-      margin-top: 2vh;
-      /* bottom: 0vh; */
-      left: 23%;
-
-  }
-
-  div#copy h4{
-      color: white;
-      font-family: "aldo";
-      font-size: 1em;
-
-  }
+    }
 
 
+
+
+    article.curso{
+        overflow: hidden;
+        
+    }
+    div#titulo {
+        width: 98%;
+        float: left;
+        margin-top: 2vh;
+        color: white;
+    
+    }
+    div#titulo h1{
+        width: 100%;
+        text-align: center;
+        font-family: 'aldo';
+        font-size: 1.5em;
+        color: white;
+    }
+    div#titulo h2{
+        width: 100%;
+        text-align: center;
+        font-family: 'aldo';
+        font-size:1.2em; 
+        color: white;
+    }
+    
+    div#titulo p{
+        display:none;
+    }
+    
+    div#titulo h3{
+        display: none;
+        
+    }
+    div#titulo ul{
+        color: white;
+        font-family: "aller";
+        margin-left:5%;
+        display: block;
+        font-size: 1em;
+    }
+    
+    article.curso video{
+        float: left;
+        width: 98%;
+        margin-top: 2vh;
+        margin-left: 0%;
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
 }
+    section button{
+        margin-left: 25%;
+        width: 50%;
+        height: 6vh;
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
+        margin-top: 6vh;
+        font-size: 1.2em;
+    }
+    
+    
+    div#redesSociales{
+        margin-left: 0%;
+        margin-top: 8vh;
+
+    }
+    div#redesSociales ul{
+        
+        margin-left: 10%;
+        overflow: hidden;
+        padding-left: 0%;
+        padding-top: 4vh;
+        
+
+    }
+    
+    div#redesSociales ul li{
+    
+        float: left;
+        list-style:none;
+        width: 12%;
+        
+    }
+        
+    div#redesSociales ul li a i{
+        position: relative;
+        color: white;
+        font-size: 1.7em;
+        margin-left: 1%;
+    }
+    div#copy{
+        position: relative;
+        margin-top: 2vh;
+        
+
+    }
+
+    div#copy h4{
+        color: white;
+        font-family: "aldo";
+        font-size: 1em;
+        padding-left: 0%;
+
+    }
+
+}  
 /* for tablet */
+
+
+
+
+
+
 @media (max-width:1024px) and (min-width:768px){
   nav#principal img{
       width: 3%;
@@ -357,51 +446,5 @@ div#copy h4{
       padding-left: 5%;
 
   }
-  section article video{
-    text-align: center;
-    display: block;
-    margin-left: 20px;
-  }
-  section article h1{
-    margin-left: 20px;
-
-  }
-  section article h2{
-    margin-left: 20px;
-  }
-  #redesSociales ul{
-      margin-bottom: 0vh;
-      margin-top: 3vh;
-      padding-left: 28%;
-      padding-top: 3%;
-
-
-  }
-  #redesSociales ul li{
-
-      width: 4%;
-      margin-left: 3.8%;
-
-  }
-
-  #redesSociales ul li a i{
-      position: relative;
-      color: white;
-      font-size: 2.2em;
-      margin-left: 1%;
-  }
-  div#copy{
-      position: relative;
-      margin-top: 5vh;
-      bottom: 0vh;
-      left: 37%;
-
-  }
-
-  div#copy h4{
-      color: white;
-      font-family: "aldo";
-      font-size: 1.2em;
-
-  }
+  
 }
