--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -346,7 +346,10 @@ div#copy h4{
        
         width: 95%;
         left: 0%;
+    }div.animation #particles-js{
+        display: none;
     }
+
 
 }
 
