--- a/css/styleproducts.css
+++ b/css/styleproducts.css
@@ -550,36 +550,246 @@ div.descripcion p{
 }
 
 
-
 #redesSociales ul{
-  width: 100%;
-  height: 6vh;
-  padding-top: 1vh;
-  padding-left: 35%;
-  text-align: center;
-  
-  
+    width: 120%;
+    overflow: hidden;
+    margin-bottom: 0vh;
+    padding-left: 41%;
+    padding-top: 2%;
+    
 }
-
 #redesSociales ul li{
 
     float: left;
     list-style:none;
-    width:8%;
-    
-    
+    width: 4%;
 }
-#redesSociales ul li a {
+
+#redesSociales ul li a i{
     position: relative;
     color: white;
     font-size: 1.7em;
-    margin-left: 4%;
-    
-    
+    margin-left: 1%;
+}
+
+#redesSociales ul li a i:hover{
+    transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+div#copy{
+    position: relative;
+    margin-top: 2vh;
+    bottom: 0vh;
+    left: 42%;
 
 }
-#redesSociales small{
+
+div#copy h4{
     color: white;
-    margin-left: 42%;
+    font-family: "aldo";
+    font-size: 1em;
+
+}
+}
+@media only screen and (min-width: 1180px){
+
+ul.nav-pills{
+    display: none;
+}
+nav#principal ul{
+    display: block;
+}
+
+section{
+  overflow:hidden;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  text-align: center;
+  padding-left: 10%;
+  margin-top: 6vh;
+
+}
+article{
+    margin-bottom: 10px;
+    height: 60vh;
+}
+article.product{
+  float: left;
+  width: 20%;
+  margin-left: 20px;
+}
+.photo-container{
+    position: relative;
+    margin-top: 2vh;
+    text-align: center;
+  
+}
+.photo-container img{
+    width: 100%;
+    border-radius: 10px ;
+}
+a.more{
+  display: block;
+  background-color: rgb(248, 147, 31);
+  text-decoration: none;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: white;
+  width:45%;
+  font-family: "aller";
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+nav#principal{
+    overflow: hidden;
+    width: 100%;
+    height: 10vh;
+}
+nav#principal img{
+    float: left;
+    position: relative;
+    width: 4%;
+    top: 1vh;
+    left: 1%;
+}
+nav#principal h2{
+    float: left;
+    position: relative;
+    width: 15%;
+    top: 2vh;
+    left: 2%;
+    color: white;
+    font-family: "aldo";
+    font-size: 1.6em;
+
+}
+nav#principal ul{
+    overflow: hidden;
+    float: left;
+    left: 28%;
+    top: 3vh;
+    width: 55%;
+    position: relative;
+    right: 1%;
+}
+
+nav#principal ul li{
+
+    float: left;
+    left: 60%;
+    width: 14%;
+    margin-left:2%;
+    list-style: none;
+
+}
+nav#principal ul li a{
+    width: 40%;
+    padding-left: 0%;
+    color: white;
+    text-align: center;
+    font-family: 'aldo';
+    font-size: 1.2em;
+
+}
+nav#principal ul li#faq{
+    padding-left: 4%;
+
+}
+div.animation #particles-js{
+    width: 90%;
+	height: 180vh;
+	/*margin-left: 10%;*/
+	min-height: 300px;
+	position: absolute;
+}
+
+
+div.titulo{
+  margin-top: 1vh;
+  height: 12vh;
+  border: 1px solid white;
+  align-content: center;
+  border-radius: 10px ;
+  -webkit-border-radius: 10px ;
+  -moz-border-radius: 10px ;
+  -ms-border-radius: 10px ;
+  -o-border-radius: 10px ;
+}
+
+div.titulo h2{
+  color:white;
+  font-family: "aller";
+  font-size: 1.4em;
+  padding-top: 2vh;
+}
+div.descripcion p{
+  color:white;
+  font-family: "aller";
+  font-size: 1em;
+  margin-top: 2vh; 
+
+}
+
+
+#redesSociales ul{
+    width: 120%;
+    overflow: hidden;
+    margin-bottom: 0vh;
+    padding-left: 41%;
+    padding-top: 2%;
+    
+}
+#redesSociales ul li{
+
+    float: left;
+    list-style:none;
+    width: 4%;
+}
+
+#redesSociales ul li a i{
+    position: relative;
+    color: white;
+    font-size: 1.7em;
+    margin-left: 1%;
+}
+
+#redesSociales ul li a i:hover{
+    transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
+}
+div#copy{
+    position: relative;
+    margin-top: 2vh;
+    bottom: 0vh;
+    left: 42%;
+
+}
+
+div#copy h4{
+    color: white;
+    font-family: "aldo";
+    font-size: 1em;
+
 }
 }
