--- a/css/styleDetalleProd.css
+++ b/css/styleDetalleProd.css
@@ -75,26 +75,12 @@ nav#principal ul li#faq{
     padding-left: 4%;
 
 }
-/*div.animation #particles-js{
-    width: 80%;
-	height: 100vh;
-	/*margin-left: 10%;*/
-	/*min-height: 300px;
-	position: absolute;
-
-}*/
-/*div.spinner-grow{
-    margin-left: 48.5%;
-}*/
-
-
-
 
 #redesSociales ul{
     width: 100%;
     overflow: hidden;
     margin-bottom: 0vh;
-    padding-left: 41%;
+    padding-left: 42%;
     padding-top: 2%;
 
 }
@@ -102,7 +88,8 @@ nav#principal ul li#faq{
 
     float: left;
     list-style:none;
-    width: 4%;
+    width: 5%;
+    
 
 }
 #redesSociales ul li a i{
@@ -110,9 +97,6 @@ nav#principal ul li#faq{
     color: white;
     font-size: 1.7em;
     margin-left: 1%;
-
-
-
 
 }
 #redesSociales small{
@@ -213,9 +197,55 @@ div#copy h4{
     font-size: 0.8em;
     width: 100%;
     text-align: center;
-    margin-top: 2%;
+    margin-top: 1vh;
 
 }
+div.precio{
+    position: relative;
+    width: 25%;
+    margin-left: 5%;
+    margin-top: -7vh;
+
+}
+
+div.precio h2{
+    position: relative;
+    width: 60%;
+    background-color:rgb(248, 147, 31);
+    margin-left: 0%;
+    text-align: center;
+    font-family: 'aller';
+    font-size: 1.5em;
+    color: white;
+    border: solid white 1px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px ;
+    -moz-border-radius: 10px ;
+    -ms-border-radius: 10px ;
+    -o-border-radius: 10px ;
+}
+div.circulo{
+    position: relative;
+    width: 30%;
+    background-color:rgb(248, 147, 31);
+    margin-right: 5%;
+    top: 0vh;
+    text-align: center;
+    font-family: 'aller';
+    color: white;
+    border: solid white 1px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+
+
+
+
+
 
 /* for mobile phone */
 
@@ -280,9 +310,6 @@ div#copy h4{
 
     }
 
-
-
-
     article.curso{
         overflow: hidden;
         
@@ -337,15 +364,15 @@ div#copy h4{
         -o-border-radius: 20px;
 }
     section button{
-        margin-left: 25%;
-        width: 50%;
+        margin-left: 17%;
+        width: 65%;
         height: 6vh;
         border-radius: 20px;
         -webkit-border-radius: 20px;
         -moz-border-radius: 20px;
         -ms-border-radius: 20px;
         -o-border-radius: 20px;
-        margin-top: 6vh;
+        margin-top: 2vh;
         font-size: 1.3em;
     }
     section button a{
@@ -356,8 +383,8 @@ div#copy h4{
     
     div#redesSociales{
         
-        margin-left: 0%;
-        margin-top: 8vh;
+        margin-left: 8%;
+        margin-top: 0vh;
 
     }
     div#redesSociales ul{
@@ -386,7 +413,8 @@ div#copy h4{
     }
     div#copy{
         position: relative;
-        margin-top: 2vh;
+        margin-top: 1vh;
+        margin-left: -10%;
         
 
     }
@@ -403,8 +431,46 @@ div#copy h4{
 
     }
 
+    div.precio{
+        position: relative;
+        width: 60%;
+        margin-left: 20%;
+        margin-top: 4vh;
+    
+    }
+    
+    div.precio h2{
+        width: 50%;
+        margin-left: 0%;
+        font-size: 1.1em;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+}
+    div.circulo{
+        width: 35%;
+        background-color:rgb(248, 147, 31);
+        top: 0vh;
+        text-align: center;
+        font-family: 'aller';
+        color: white;
+        border: solid white 1px;
+        border-radius: 50%;
+        -webkit-border-radius: 45%;
+        -moz-border-radius: 45%;
+        -ms-border-radius: 45%;
+        -o-border-radius: 45%;
+    }
 
-}  
+
+} 
+
+
+
+
+
 /* for tablet */
 
 
@@ -415,6 +481,7 @@ div#copy h4{
 @media (max-width:1024px) and (min-width:768px){
   nav#principal{
     height: 8vh;
+    
 
   }
 
@@ -424,7 +491,7 @@ div#copy h4{
   }
   nav#principal img{
       width: 3%;
-      top: 2.5vh;
+      top: 2vh;
 
   }
 
@@ -508,9 +575,9 @@ div#titulo ul{
 
 article.curso video{
     float: left;
-    width: 80%;
+    width: 70%;
     margin-top: 2vh;
-    margin-left: 10%;
+    margin-left: 15%;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -518,16 +585,16 @@ article.curso video{
     -o-border-radius: 20px;
 }
 section button{
-    margin-left: 30%;
-    width: 40%;
+    margin-left: 32%;
+    width: 35%;
     height: 5vh;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
-    margin-top: 4vh;
-    font-size: 1.8em;
+    margin-top: 2vh;
+    font-size: 1.6em;
     
     
 }
@@ -537,7 +604,7 @@ section button a{
        
 }
 div#redesSociales{
-    margin-left: 0%;
+    margin-left: 2%;
     margin-top: 1vh;
 
 }
@@ -577,5 +644,41 @@ div#copy h4{
     font-family: "aldo";
     font-size: 1em;
     padding-left: 0%;
+    margin-left: -4%;
 }
+div.precio{
+    position: relative;
+    width: 50%;
+    margin-left: 20%;
+    margin-top: 1vh;
+
+}
+
+div.precio h2{
+    width: 40%;
+    margin-left: 0%;
+    font-size: 1.1em;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+div.circulo{
+    width: 35%;
+    background-color:rgb(248, 147, 31);
+    top: 0vh;
+    text-align: center;
+    font-family: 'aller';
+    color: white;
+    border: solid white 1px;
+    border-radius: 50%;
+    -webkit-border-radius: 45%;
+    -moz-border-radius: 45%;
+    -ms-border-radius: 45%;
+    -o-border-radius: 45%;
+}
+
+
+
 }
